--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,13 +1,57 @@
-html,body{
-  padding: 0;
-  margin: 0;
-  #app {
-    font-family: 'Avenir', Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50;
-    margin-top: 60px;
-    border: 1px solid red;
-  }
+html,body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    ul,li{
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+    #app {
+        font-family: 'Avenir', Helvetica, Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-align: center;
+        color: #2c3e50;
+        font-size: 14px;
+        // margin-top: 60px;
+        // border: 1px solid red;
+        min-width: 320px;
+        height: 100%;
+        .homePage {
+            // border: 1px solid blue;
+            height: 100%;
+            text-align: center;
+            img.logo{
+                // border: 1px solid red;
+                margin: 15px auto 15px;
+                max-width: 130px;
+            }
+            >ul.nav {
+                // border: 1px solid red;
+                margin:0 45px;
+                >li {
+                    // border: 12px solid red;
+                    width: 25%;
+                    float: left;
+                    margin-bottom: 15px;
+                    >img {
+                        width: 60px;
+                        height: 60px;
+                        border-radius: 8px;
+                        border:1px solid #eee;
+                    }
+                    >div{
+                        margin-top: 1px;
+                    }
+                }
+            }
+            .footer{
+                position: absolute;
+                bottom: 10px;
+                width: 100%;
+                color: #ccc;
+            }
+        }
+    }
 }
