--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,34 +1,41 @@
-html,body {
+html,
+body {
     padding: 0;
     margin: 0;
+    font-size: 13px;
+    min-width: 320px;
     height: 100%;
-    ul,li{
+    ul,
+    li {
         list-style: none;
         padding: 0;
         margin: 0;
     }
-    #app {
-        // border: 1px solid red;
-        font-family: 'Avenir', Helvetica, Arial, sans-serif;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        text-align: center;
-        color: #2c3e50;
-        font-size: 14px;
-        min-width: 320px;
+}
+.text-center{
+    text-align: center;
+}
+#app {
+    // border: 1px solid red;
+    font-family: 'Avenir', Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #2c3e50;
+
+    height: 100%;
+    >.home {
+        // border: 1px solid blue;
         height: 100%;
-        .homePage {
-            // border: 1px solid blue;
-            height: 100%;
-            text-align: center;
-            img.logo{
+        >.index {
+            border: 1px solid blue;
+            img.logo {
                 // border: 1px solid red;
                 margin: 15px auto 15px;
                 max-width: 130px;
             }
-            >ul.nav {
+            ul.nav {
                 // border: 1px solid red;
-                margin:0 45px;
+                margin: 0 45px;
                 >li {
                     // border: 12px solid red;
                     width: 25%;
@@ -38,18 +45,24 @@ html,body {
                         width: 60px;
                         height: 60px;
                         border-radius: 8px;
-                        border:1px solid #eee;
+                        border: 1px solid #eee;
                     }
-                    >div{
+                    >div {
                         margin-top: 1px;
                     }
                 }
             }
-            .footer{
+            .footer {
                 position: absolute;
                 bottom: 10px;
                 width: 100%;
                 color: #ccc;
+            }
+        }
+        .search{
+            img.logo{
+                margin: 15px auto 15px;
+                max-width: 130px;
             }
         }
     }
