--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,4 +1,3 @@
-html,
 body {
     padding: 0;
     margin: 0;
@@ -12,58 +11,60 @@ body {
         margin: 0;
     }
 }
-.text-center{
+
+.text-center {
     text-align: center;
 }
+
 #app {
     // border: 1px solid red;
     font-family: 'Avenir', Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #2c3e50;
-
     height: 100%;
-    >.home {
+}
+
+.home {
+    // border: 1px solid blue;
+    height: 100%;
+    >.index {
         // border: 1px solid blue;
-        height: 100%;
-        >.index {
-            border: 1px solid blue;
-            img.logo {
-                // border: 1px solid red;
-                margin: 15px auto 15px;
-                max-width: 130px;
-            }
-            ul.nav {
-                // border: 1px solid red;
-                margin: 0 45px;
-                >li {
-                    // border: 12px solid red;
-                    width: 25%;
-                    float: left;
-                    margin-bottom: 15px;
-                    >img {
-                        width: 60px;
-                        height: 60px;
-                        border-radius: 8px;
-                        border: 1px solid #eee;
-                    }
-                    >div {
-                        margin-top: 1px;
-                    }
+        img.logo {
+            // border: 1px solid red;
+            margin: 15px auto 15px;
+            max-width: 130px;
+        }
+        ul.nav {
+            // border: 1px solid red;
+            margin: 0 45px;
+            >li {
+                // border: 12px solid red;
+                width: 25%;
+                float: left;
+                margin-bottom: 15px;
+                >img {
+                    width: 60px;
+                    height: 60px;
+                    border-radius: 8px;
+                    border: 1px solid #eee;
+                }
+                >div {
+                    margin-top: 1px;
                 }
             }
-            .footer {
-                position: absolute;
-                bottom: 10px;
-                width: 100%;
-                color: #ccc;
-            }
         }
-        .search{
-            img.logo{
-                margin: 15px auto 15px;
-                max-width: 130px;
-            }
+        .footer {
+            position: absolute;
+            bottom: 10px;
+            width: 100%;
+            color: #ccc;
+        }
+    }
+    .search {
+        img.logo {
+            margin: 15px auto 15px;
+            max-width: 130px;
         }
     }
 }
