--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -66,5 +66,15 @@ body {
             margin: 15px auto 15px;
             max-width: 130px;
         }
+        // .searchOne{
+        //     // border: 1px solid red;
+            
+        // }
+    }
+    .inputRight{
+        .mint-field-core{
+            text-align: right;
+            padding-right: 8px;
+        }
     }
 }
