--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -78,3 +78,18 @@ body {
         }
     }
 }
+
+.scrollList{
+    position: absolute;
+    left: 0;
+    top:40px;
+    right: 0;
+    bottom: 0;
+    // border:1px solid red;
+     overflow:auto;
+    >li{
+        // border: 1px solid blue;
+        padding:8px 15px;
+        border-bottom: 1px solid #eee;
+    }
+}
