品牌 git commit -m 品牌」 git commit -m 品牌

--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -89,7 +89,13 @@ body {
      overflow:auto;
     >li{
         // border: 1px solid blue;
-        padding:8px 15px;
+        padding:12px 15px;
         border-bottom: 1px solid #eee;
+    }
+}
+.navbar{
+    // border: 2px solid red;
+    .mint-tab-item-label{
+        font-size: 14px;
     }
 }
