--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -89,6 +89,7 @@ body {
      overflow:auto;
     >li{
         // border: 1px solid blue;
+        font-size: 15px;
         padding:12px 15px;
         border-bottom: 1px solid #eee;
     }
