--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -133,9 +133,9 @@ img.logo {
         td {
             border: 1px solid #eee;
             padding: 8px 10px;
-            &:first-child{
-                    color: #666;
-                }
+            &:first-child {
+                color: #666;
+            }
         }
     }
     >table.noBorder {
@@ -162,9 +162,9 @@ img.logo {
                 width: 88px;
                 color: #999;
             }
-            &:first-child{
-                    color: #666;
-                }
+            &:first-child {
+                color: #666;
+            }
         }
     }
     >table.detailOnly {
@@ -185,11 +185,26 @@ img.logo {
         tr {
             td {
                 padding: 8px 0;
-                word-wrap:break-word;
-                &:first-child{
+                word-wrap: break-word;
+                &:first-child {
                     color: #666;
                 }
             }
         }
+    }
+}
+
+.getMore {
+    // border: 2px solid red;
+    height: 33px;
+    line-height: 33px;
+    position: relative;
+    .noMore {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #fff;
     }
 }
