login & api update

--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -169,6 +169,7 @@ img.logo {
     }
     >table.detailOnly {
         // border: 1px solid red;
+        margin-bottom: 20px;
         caption {
             margin: 0 30px 6px 0;
             >span {
