--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -11,6 +11,10 @@ body {
         margin: 0;
     }
 }
+//重写MINT UI 样式
+.mint-indicator-wrapper {
+    z-index: 999;
+}
 
 .text-center {
     text-align: center;
@@ -55,14 +59,6 @@ body {
             width: 100%;
             color: #ccc;
         }
-    }
-    .search {
-        img.logo {
-            margin: 15px auto 15px;
-            max-width: 130px;
-        } // .searchOne{
-        //     // border: 1px solid red;
-        // }
     }
     .inputRight {
         .mint-field-core {
