--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -86,7 +86,10 @@ body {
 img.logo {
     // border: 1px solid red;
     margin: 15px auto 15px;
-    max-width: 100px;
+    // max-width: 100px;
+
+    width: 100%;
+    height: 77px;
 }
 
 .navbar {
