--- a/src的副本/assets/base.less
+++ b/src的副本/assets/base.less
@@ -104,13 +104,13 @@ img.logo {
     .tabContent {
         // border: 1px solid red;
         margin-top: 30px;
-        min-height: 280px;
+        min-height: 260px;
         position: relative;
         .text-center {
             position: absolute;
             left: 0;
             right: 0;
-            bottom: 15px;
+            bottom: 0;
             .mint-button {
                 width: 100px;
                 margin: 0 10px;
@@ -138,7 +138,10 @@ img.logo {
         border-spacing: 0;
         border-collapse: collapse;
         td{
-            word-break:break-all;
+            .maxWidth{
+                max-width: 238px;
+                // border: 1px solid red;
+            }
         }
     }
     table.hasBorder {
@@ -214,6 +217,16 @@ img.logo {
 }
 
 .getMore {
-    height: 30px;
-    line-height: 20px;
+    // border: 2px solid red;
+    height: 33px;
+    line-height: 33px;
+    // position: relative;
+    // .noMore {
+    //     position: absolute;
+    //     left: 0;
+    //     top: 0;
+    //     right: 0;
+    //     bottom: 0;
+    //     background-color: #fff;
+    // }
 }
