--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -51,6 +51,12 @@ body {
                     margin-top: 1px;
                 }
             }
+            &:after{
+                content: "";
+                display: table;
+                height: 0;
+                clear: both;
+            }
         }
         .footer {
             position: absolute;
