detail show field

--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -51,7 +51,7 @@ body {
                     margin-top: 1px;
                 }
             }
-            &:after{
+            &:after {
                 content: "";
                 display: table;
                 height: 0;
@@ -73,7 +73,7 @@ body {
         background-repeat: no-repeat;
         background-position: bottom;
         .mint-cell-value {
-            input.mint-field-core{
+            input.mint-field-core {
                 text-align: right;
                 padding-right: 10px;
             }
@@ -161,7 +161,7 @@ img.logo {
 
 .tableWrap {
     // border: 1px solid red;
-    margin: 10px;
+    margin: 10px 0;
     table {
         width: 100%;
         border-spacing: 0;
@@ -171,6 +171,7 @@ img.logo {
         }
     }
     table.hasBorder {
+        margin: 0 10px;
         td {
             border: 1px solid #eee;
             padding: 5px 10px;
@@ -232,7 +233,7 @@ img.logo {
         }
         tr {
             td {
-                padding: 5px 0;
+                padding: 5px 10px;
                 word-wrap: break-word;
                 &:first-child {
                     color: #666;
