--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -160,8 +160,7 @@ img.logo {
 }
 
 .tableWrap {
-    // border: 1px solid red;
-    margin: 10px 0;
+    margin: 10px;
     table {
         width: 100%;
         border-spacing: 0;
@@ -171,7 +170,7 @@ img.logo {
         }
     }
     table.hasBorder {
-        margin: 0 10px;
+        // margin: 0 10px;
         td {
             border: 1px solid #eee;
             padding: 5px 10px;
@@ -189,7 +188,7 @@ img.logo {
             }
         }
         td {
-            padding: 5px 10px;
+            padding: 5px 10px 5px 0;
             .listPic {
                 width: 88px;
                 height: 88px;
