--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -172,7 +172,7 @@ img.logo {
     table.hasBorder {
         // margin: 0 10px;
         td {
-            border: 1px solid #eee;
+            border: 1px solid #F5F5F5;
             padding: 5px 10px;
             &:first-child {
                 color: #666;
